--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kasper is a clean, responsive portfolio or landing page built with HTML and CSS.">
+    <meta name="keywords" content="HTML, CSS, portfolio, web design, frontend">
     <title>Kasper | Template Two</title>
     <!--? Render All Elements Normally -->
     <link rel="stylesheet" href="css/normalize.css">
@@ -12,10 +14,10 @@
     <!--? Main Template css file -->
     <link rel="stylesheet" href="css/kasper.css">
     <!--? Google Fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-        rel="stylesheet"> -->
+        rel="stylesheet">
 </head>
 
 <body>
