--- a/index.html
+++ b/index.html
@@ -157,56 +157,56 @@
         </ul>
         <div class="portfolio-content">
             <div class="port-col">
-                <img src="/images/shuffle-01.jpg" alt="Waiting">
+                <img src="./images/shuffle-01.jpg" alt="Waiting">
                 <div class="text-caption">
                     <h4> Awesome Image</h4>
                     <p>Photograghy</p>
                 </div>
             </div>
             <div class="port-col">
-                <img src="/images/shuffle-02.jpg" alt="Waiting">
+                <img src="./images/shuffle-02.jpg" alt="Waiting">
                 <div class="text-caption">
                     <h4> Awesome Image</h4>
                     <p>Photograghy</p>
                 </div>
             </div>
             <div class="port-col">
-                <img src="/images/shuffle-03.jpg" alt="Waiting">
+                <img src="./images/shuffle-03.jpg" alt="Waiting">
                 <div class="text-caption">
                     <h4> Awesome Image</h4>
                     <p>Photograghy</p>
                 </div>
             </div>
             <div class="port-col">
-                <img src="/images/shuffle-04.jpg" alt="Waiting">
+                <img src="./images/shuffle-04.jpg" alt="Waiting">
                 <div class="text-caption">
                     <h4> Awesome Image</h4>
                     <p>Photograghy</p>
                 </div>
             </div>
             <div class="port-col">
-                <img src="/images/shuffle-05.jpg" alt="Waiting">
+                <img src="./images/shuffle-05.jpg" alt="Waiting">
                 <div class="text-caption">
                     <h4> Awesome Image</h4>
                     <p>Photograghy</p>
                 </div>
             </div>
             <div class="port-col">
-                <img src="/images/shuffle-06.jpg" alt="Waiting">
+                <img src="./images/shuffle-06.jpg" alt="Waiting">
                 <div class="text-caption">
                     <h4> Awesome Image</h4>
                     <p>Photograghy</p>
                 </div>
             </div>
             <div class="port-col">
-                <img src="/images/shuffle-07.jpg" alt="Waiting">
+                <img src="./images/shuffle-07.jpg" alt="Waiting">
                 <div class="text-caption">
                     <h4> Awesome Image</h4>
                     <p>Photograghy</p>
                 </div>
             </div>
             <div class="port-col">
-                <img src="/images/shuffle-08.jpg" alt="Waiting">
+                <img src="./images/shuffle-08.jpg" alt="Waiting">
                 <div class="text-caption">
                     <h4> Awesome Image</h4>
                     <p>Photograghy</p>
